--- a/src/scss/blocks/_site-head.scss
+++ b/src/scss/blocks/_site-head.scss
@@ -2,11 +2,21 @@
   position: relative;
   padding-block: var(--space-m);
   z-index: 999;
-  position: fixed;
+  position: unset;
   display: flex;
   justify-content: flex-start;
+  flex-direction: column;
   width: 100%;
   top: 0;
+
+  .js-active & {
+    position: fixed;
+    flex-direction: row;
+
+    &__brand {
+      margin-bottom: 0;
+    }
+  }
 
   @include media-query("md") {
     justify-content: center;
@@ -31,10 +41,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     gap: 1.5rem;
     transform-origin: left center;
     transform: scale(0.7);
     transition: 0.5s ease;
+    margin-bottom: var(--space-s-m);
 
     @include media-query("md") {
       transform: scale(1);
